# claude-code-proxy

./: .gitignore  BUGFIX_403_FORBIDDEN.md  BUGFIX_GROUP_DELETE.md  BUGFIX_GROUP_DELETE_TEST_GUIDE.md  BUGFIX_GROUP_DELETE_V2.md  BUGFIX_HTTPS_PROXY_SUPPORT.md  BUGFIX_NO_CONFIG_AVAILABLE.md  BUGFIX_PROXY_URI_PATH.md  BUGFIX_SUMMARY.md  BUILD_AND_PACKAGE.md  CHANGELOG.md  CHANGES_CONFIG_PREVIEW.md  CLAUDE.md  DEBUG_STEPS.md  DEVELOP.md  FEATURE_LATENCY_ALWAYS_RECORD.md  FRAMEWORK_RECOMMENDATION.md  HOT_CONFIG_SWAP.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_DESIGNS.md  LOGO_REPLACEMENT_GUIDE.md  PROXY_COMPLETE_FIX_SUMMARY.md  PROXY_CONFIG_EXPLANATION.md  README.md  RELEASE.md  REMOVE_KEYCHAIN.md  SHOW_API_KEY_IN_EDIT.md  STARTUP_TEST_REPORT.md  START_GUIDE.md  TESTING_GUIDE.md  TEST_REPORT.md  TEST_RESULTS.md  UNIFIED_DASHBOARD_DESIGN.md  URL_FORMAT.md  URL_PORT_REMOVAL_REPORT.md  VENDOR_CONFIG_DESIGN.md  build.sh  create-dmg-simple.sh  migrate-database.sh  release.sh  (+8 more)
.github/workflows/: build.yml
config/: README.md  providers.json  recommendations.json
docs/: deployment-guide.md  model-mapper-optimization.md  openai-model-support.md  silent-provider-switch.md  terminal-feature-completion.md  terminal-provider-switch-fix.md  truly-silent-provider-switch.md
helloagents/: CHANGELOG.md  project.md
helloagents/history/: index.md
helloagents/wiki/modules/: environment-setup.md
migrations/: 001_add_model_config_fields.sql
scripts/: check-setup.sh
specs/001-claude-code-proxy/: data-model.md  framework-decision-guide.md  framework-evaluation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup  tasks.md.bak2  tasks.md.bak3  tasks.md.bak4  tasks.md.bak5  tasks.md.bak6  tasks.md.bak7  tasks.md.bak8  tauri-implementation-guide.md
specs/001-claude-code-proxy/checklists/: requirements.md
specs/001-claude-code-proxy/contracts/: tauri-commands.md  ui-components.md
specs/004-auto-setup-environment/: DESIGN.md  FEATURE_SUMMARY.md
src-tauri/: .clippy.toml  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/backup_20251113_110631/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: api_config.rs  api_test.rs  app_update.rs  auto_switch.rs  balance.rs  claude_code.rs  config_group.rs  env_var.rs  health_check.rs  mcp.rs  mod.rs  model_mapping.rs  permissions.rs  project_context.rs  provider_preset.rs  proxy_log.rs  proxy_service.rs  recommendation.rs  setup.rs  skills.rs  slash_commands.rs  terminal.rs
src-tauri/src/converters/: claude_to_gemini.rs  claude_types.rs  gemini_to_claude.rs  gemini_types.rs  mod.rs  model_mapper.rs  openai_claude.rs  openai_types.rs  validator.rs
src-tauri/src/db/: init.rs  migrations.rs  mod.rs  pool.rs  schema.sql  seed.rs
src-tauri/src/db/migrations/: migration_v10_detailed_request_log.sql  migration_v12_smart_switch.sql  migration_v13_node_environment.sql  migration_v14_openai_support.sql  migration_v15_model_mapping.sql  migration_v16_gemini_model_mapping.sql  migration_v17_terminal_sessions.sql  migration_v2_vendor_config.sql  migration_v4_balance_query.sql  migration_v5_retry_strategy.sql  migration_v6_test_result_fields.sql  migration_v7_add_provider_type.sql  migration_v8_proxy_request_log.sql  migration_v9_health_check.sql
src-tauri/src/models/: api_config.rs  app_settings.rs  balance.rs  claude_advanced.rs  config_backup.rs  config_group.rs  environment_variable.rs  error.rs  error_classifier.rs  failure_counter.rs  health_check.rs  mcp.rs  mod.rs  model_mapping.rs  node_environment.rs  provider_preset.rs  proxy_status.rs  recommended_service.rs  retry_strategy.rs  switch_log.rs  terminal_session.rs  test_result.rs
src-tauri/src/proxy/: client_detector.rs  error_converter.rs  error_handler.rs  logger.rs  mod.rs  protocol_detector.rs  router.rs  server.rs  smart_router.rs  stream_converter.rs  structured_logger.rs
src-tauri/src/services/: api_config.rs  api_test.rs  api_test.rs.bak  app_updater.rs  auto_switch.rs  backup.rs  backup.rs.bak  balance_scheduler.rs  balance_service.rs  claude_config.rs  claude_installer.rs  claude_test_request.rs  config_manager.rs  config_validator.rs  env_detection.rs  env_var.rs  error_classifier.rs  health_check_scheduler.rs  health_check_service.rs  keychain.rs  latency_test.rs  mcp_config.rs  mod.rs  model_mapping_service.rs  node_scanner.rs  permissions_config.rs  project_context.rs  provider_preset.rs  proxy_log.rs  proxy_service.rs  pty_manager.rs  recommendation.rs  retry_manager.rs  session_config.rs  skills_config.rs  slash_commands.rs  status_notifier.rs  terminal_session_service.rs  weight_calculator.rs
src-tauri/src/utils/: constants.rs  logger.rs  mod.rs  paths.rs  time.rs
src-ui/: .eslintignore  .eslintrc.json  .prettierignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-ui/src/: App.tsx  main.tsx  vite-env.d.ts
src-ui/src/api/: balance.ts  claude-code.ts  config.ts  env-var.ts  mcp.ts  modelMapping.ts  permissions.ts  projectContext.ts  providerPreset.ts  proxy.ts  recommendation.ts  setup.ts  skills.ts  slashCommands.ts  terminal.ts  test.ts  update.ts
src-ui/src/components/: AdvancedConfigPage.tsx  AppLayout.tsx  BackupList.tsx  BalancePanel.tsx  ClaudeCodePathDetector.tsx  CompactLayout.tsx  ConfigEditor.tsx  ConfirmDialog.tsx  DevLogPanel.tsx  EndpointSpeedTest.tsx  EnvironmentVariableManager.tsx  ErrorBoundary.tsx  FilterBar.tsx  GroupEditor.tsx  Header.tsx  HealthMonitorPanel.tsx  McpServerManager.tsx  ModelMappingManager.tsx  NodeEnvironmentList.tsx  PermissionsManager.tsx  ProviderMonitor.tsx  ProxyEnableToggle.tsx  ProxyStatusCard.tsx  QuickActionsPanel.tsx  QuickCheckPanel.tsx  ServiceCard.tsx  SetupWizard.tsx  Sidebar.tsx  SkillsManager.tsx  SlashCommandsManager.tsx  SortableConfigCard.tsx  SwitchLogTable.tsx  TestResultPanel.tsx  UpdateNotification.tsx
(+51 files in other folders)
