[package]
name = "claude-code-proxy"
version = "1.0.7"
description = "Claude Code 代理服务"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "claude_code_proxy"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 框架
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# HTTP 代理服务器
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body = "1.0"
http-body-util = "0.1"
hyper-rustls = "0.27"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
tower = "0.4"

# 数据库
rusqlite = { version = "0.30", features = ["bundled"] }

# 日志
log = "0.4"
env_logger = "0.11"

# 系统密钥链
keyring = "2.2"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# HTTP 客户端(用于 API 测试) - 明确指定使用 ring 加密提供者
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "rustls-tls-native-roots"] }

# 流式响应处理
futures-util = "0.3"

# 跨平台路径
dirs = "5.0"

# 随机数生成 (用于重试抖动)
rand = "0.8"

# UUID 生成 (用于响应ID生成)
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# 用于启用旧的测试代码（已被新测试替代，默认禁用）
# 使用 cargo test --features old_tests 来运行旧测试
old_tests = []

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 特定依赖(如需)

[target.'cfg(target_os = "windows")'.dependencies]
# Windows 特定依赖(如需)

[target.'cfg(target_os = "linux")'.dependencies]
# Linux 特定依赖(如需)
